--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,9 +1,7 @@
 <div class="container__menu-bar">
   <ul>
-    <li><a href="https://linkedin.com/in/felipe-aguiar-exe">Linkedin</a></li>
+    <li><a href="https://www.linkedin.com/in/enzo-yutaka-hashimoto-571a2b235/">Linkedin</a></li>
     <li><span>•</span></li>
-    <li><a href="https://github.com/felipeAguiarCode">Github</a></li>
-    <li><span>•</span></li>
-    <li><a href="https://www.youtube.com/channel/UCCcDZkI7AITYFCgDEFV9OoQ">Youtube</a></li>
+    <li><a href="https://github.com/codezeron">Github</a></li>
   </ul>
 </div>
