--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,5 +5,12 @@
   flex-direction: row;
   justify-content: center;
 }
+.container__articles_lower{
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
 
 
