--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -36,3 +36,31 @@
     </app-small-card>
   </div>
 </div>
+<div class="container__articles_lower">
+  <app-small-card-lower
+    Id="4"
+    cardTitle="Novo filme dos X-men está em pós produção, afirma diretor"
+    photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
+  >
+  </app-small-card-lower>
+  <app-small-card-lower
+    Id="4"
+    cardTitle="Novo filme dos X-men está em pós produção, afirma diretor"
+    photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
+  >
+  </app-small-card-lower>
+  <app-small-card-lower
+      Id="3"
+      cardTitle="Novo filme do pantera negra lançado em breve"
+      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/35720ACD323F927C3A83D809D0F460BD3651740DA519BCC184B6F042057EA14D/scale?width=1200&aspectRatio=1.78&format=jpeg"
+    >
+    </app-small-card-lower
+    >
+    <app-small-card-lower
+      Id="3"
+      cardTitle="Novo filme do pantera negra lançado em breve"
+      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/35720ACD323F927C3A83D809D0F460BD3651740DA519BCC184B6F042057EA14D/scale?width=1200&aspectRatio=1.78&format=jpeg"
+    >
+    </app-small-card-lower
+    >
+</div>
